--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,12 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+
+    - name: Regresion Playwright tests
+      run: npm run regresion
+
+
+
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
