--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,29 +4,35 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
+
+
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
       - name: 📥 Clonar repositorio
         uses: actions/checkout@v4
 
-      - name: Instalar Node.js
+      - name: ⚙️ Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Instalar dependencias
+      - name: 📦 Instalar dependencias
         run: npm install
 
-      - name: Ejecutar pruebas con Playwright
+      - name: 🔽 Instalar navegadores de Playwright
+        run: npx playwright install --with-deps
+
+      - name: 🚀 Ejecutar pruebas con Playwright
         run: npx playwright test --reporter=html,junit
 
-      - name: Subir Reporte a QMetry
+      - name: 📤 Subir Reporte a QMetry
         run: |
           curl -X POST "https://qtmcloud.qmetry.com/rest/api/automation/importresult" \
             -H "Content-Type: multipart/form-data" \
-            -H "apiKey: "${{ secrets.QMETRY_API_KEY }}"" \
+            -H "apiKey: ${{ secrets.QMETRY_API_KEY }}" \
             -F "file=@playwright-report/results.xml" \
             -F "format=junit"
