--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,10 +29,17 @@ jobs:
       - name: 🚀 Ejecutar pruebas con Playwright
         run: npx playwright test --reporter=html,junit
 
-      - name: 📤 Subir Reporte a QMetry v1
+      - name: 🔽 Subir reporte a Qmetry
         run: |
-          curl -X POST "https://qtmcloud.qmetry.com/rest/api/automation/importresult" \
-            -H "Content-Type: multipart/form-data" \
-            -H "apiKey: ${{ secrets.QMETRY_API_KEY }}" \
-            -F "file=@playwright-report/results.xml" \
-            -F "format=junit"
+          if [[ -f test-results/results.xml ]]; then
+            echo "El archivo results.xml existe. Subiendo a Qmetry..."
+            curl -X POST "https://qtmcloud.qmetry.com/rest/api/automation/importresult" \
+              -H "Content-Type: multipart/form-data" \
+              -H "apiKey: ${{ secrets.QMETRY_API_KEY }}" \
+              -F "file=@test-results/results.xml" \
+              -F "format=junit"
+          else
+            echo "⚠️ No se encontró results.xml. Puede que no se haya generado correctamente."
+            exit 1
+          fi
+      
