--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,7 +27,10 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: 🚀 Ejecutar pruebas con Playwright
-        run: npx playwright test
+        run: npx playwright test --reporter=junit
+
+      - name: Verificar archivos generados
+        run: ls -R test-results/
 
       - name: 🔽 Subir reporte a Qmetry
         run: node uploadResults.js
