--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,8 +26,12 @@ jobs:
       - name: 🔽 Instalar navegadores de Playwright
         run: npx playwright install --with-deps
 
+      - name: Crear carpeta test-results
+        run: mkdir -p test-results
+
+
       - name: 🚀 Ejecutar pruebas con Playwright
-        run: npx playwright test --reporter=junit
+        run: npx playwright test
 
       - name: Verificar archivos generados
         run: ls -R test-results/
