--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,7 +36,11 @@ jobs:
       - name: Verificar archivos generados
         run: ls -R test-results/
 
-      - name: 🔽 Subir reporte a Qmetry
-        run: node uploadResults.js
+      - name: Prueba subida manual con cURL
+        run: |
+          curl -X POST "https://qtmcloud.qmetry.com/rest/api/automation/importresult" \
+               -H "Content-Type: multipart/form-data" \
+               -H "apiKey: $QMETRY_API_KEY" \
+               -F "file=@test-results/results.xml"
         env:
-           QMETRY_API_KEY: "60fc7c49869b5619ba9d97b93e24b7e91bd74b92b290397ed0cd85aa91cfbc7d0ad08545a7b0bb783929a0448a6438ba308969731c58f1f91823276e1438f634ec3ef76a95afa590e60cc70c8f24466d"
+          QMETRY_API_KEY: ${{ secrets.QMETRY_API_KEY }}
